z-index fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@
   justify-content: flex-end;
   align-items: center;
   padding-right: 3vw;
-  z-index: 11;
+  z-index: 9;
 }
 
 #headerRight a {
